Fix bottom white space of h1[data-description]
This tagline should be separated from the contents.

--- a/src/css/baseline.css
+++ b/src/css/baseline.css
@@ -25,6 +25,7 @@ h1 {
 h1[data-description] {
 	font-size: 1.25rem;
 	font-weight: normal;
+	margin-bottom: 9.25rem;
 }
 
 h1[data-description]::after {
