--- a/src/css/core.css
+++ b/src/css/core.css
@@ -37,6 +37,7 @@ h1 {
 
 h1[data-description] {
 	font-size: var(--font-size-large);
+	margin-bottom: var(--space-gargantuan);
 }
 
 h2 {
